--- a/services.html
+++ b/services.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Therapy Services in Chester & Cheshire | Talk with Sian</title>
-  <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
-  <link href="css/service.css" rel="stylesheet" />
 
+  <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
+
+  <!-- SEO Meta Tags -->
   <meta
     name="description"
-    content="Explore our comprehensive range of therapy services at Talk with Sian, designed to support women in Chester and Cheshire. Specialising in trauma therapy, EFT, and more."
+    content="Explore our comprehensive range of remote therapy services, including EFT Tapping, Trauma Therapy, and CBT. Supporting women across Chester, Cheshire, and beyond."
   />
   <meta
     name="keywords"
-    content="therapy services Chester, counselling Cheshire, trauma therapy Cheshire, EFT Chester, mental health support Chester, stress management Cheshire, counselling services North West England"
+    content="EFT Tapping, Emotional Freedom Technique, Trauma Therapy Chester, CBT near me, cbt for depression, therapy near me, therapy services Cheshire, counselling Cheshire, therapist near me"
   />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
@@ -21,13 +22,15 @@
   <meta name="geo.placename" content="Chester, Cheshire, England" />
   <meta name="geo.position" content="53.1905;-2.8919" />
   <meta name="ICBM" content="53.1905, -2.8919" />
+
+  <!-- Open Graph -->
   <meta
     property="og:title"
-    content="Our Services | Talk with Sian - Therapy in Chester & Cheshire"
+    content="Our Services | Talk with Sian - Remote Therapy in Chester & Cheshire"
   />
   <meta
     property="og:description"
-    content="Learn more about the therapy services offered by Talk with Sian, including trauma therapy, EFT, and more, tailored for clients in Chester and Cheshire."
+    content="Offering EFT Tapping, Trauma Therapy, and CBT in Chester & Cheshire. Experience specialised remote counselling for women seeking professional support."
   />
   <meta property="og:url" content="https://www.talkwithsian.com/services" />
   <meta property="og:type" content="website" />
@@ -35,11 +38,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta
     name="twitter:title"
-    content="Our Services | Talk with Sian - Therapy in Chester & Cheshire"
+    content="Our Services | Talk with Sian - Remote Therapy in Chester & Cheshire"
   />
   <meta
     name="twitter:description"
-    content="Explore the wide range of therapy services offered at Talk with Sian, designed to support women in Chester and Cheshire."
+    content="Discover specialised therapy services for women, including EFT, Trauma Therapy, and CBT. Book your free consultation today."
   />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
   <link rel="canonical" href="https://talkwithsian.com/services/" />
@@ -49,11 +52,14 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
-  <!-- Main custom CSS (shared) -->
+  <!-- Global Custom CSS -->
   <link href="css/custom.css" rel="stylesheet" />
+  <!-- Services Shared CSS -->
+  <link href="css/service.css" rel="stylesheet" />
 </head>
+
 <body class="d-flex flex-column min-vh-100">
-  <!-- Navbar -->
+  <!-- Navbar with Dropdown -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center py-3" href="index.html">
@@ -75,6 +81,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav py-4">
           <li class="nav-item">
@@ -83,9 +90,44 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="services.html">Services</a>
+
+          <!-- Services Dropdown -->
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle active"
+              href="#"
+              id="servicesDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Services
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+              <li>
+                <a class="dropdown-item" href="services.html"
+                  >All Services</a
+                >
+              </li>
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <a class="dropdown-item" href="eft-therapy.html"
+                  >EFT Tapping</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="trauma-therapy.html"
+                  >Trauma Therapy</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="cbt-therapy.html"
+                  >CBT Therapy</a
+                >
+              </li>
+            </ul>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
@@ -98,8 +140,11 @@
   <div id="cookieConsent" class="cookie-consent-banner">
     <div class="container d-flex align-items-center justify-content-between">
       <p class="mb-0">
-        We use cookies to improve your experience on our site. By continuing to use our site, you accept our use of cookies.
-        <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
+        We use cookies to improve your experience on our site. By continuing to
+        use our site, you accept our use of cookies.
+        <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
+          >Learn more</a
+        >.
       </p>
       <button id="acceptCookies" class="btn btn-primary">Accept</button>
     </div>
@@ -107,11 +152,13 @@
 
   <!-- Main Content -->
   <div class="container content-container flex-grow-1 d-flex-column align-items-center justify-content-center pt-5 mt-5">
-    <div class="services-hero-section py-5 px-3 my-5">
+
+    <!-- Hero Section -->
+    <div class="services-hero-section py-5 px-3 my-5" id="discovery-call">
       <h1>Our Remote Services</h1>
       <p class="lead p-md-3">
         Welcome to Talk with Sian, where we provide specialised remote counselling
-        services tailored for women in Chester and Cheshire. Our compassionate,
+        services for women in Chester, Cheshire, and beyond. Our compassionate,
         expert care helps you navigate life’s challenges with confidence.
       </p>
       <a href="#schedule" class="btn btn-primary1 btn-lg my-4"
@@ -119,96 +166,125 @@
       >
     </div>
 
-    <div class="container pricing-section py-4 px-3 mt-5 mb-5">
+    <!-- Pricing -->
+    <div class="container pricing-section py-4 px-3 mt-5 mb-5" id="pricing-section">
       <h2 class="mb-4">Pricing</h2>
       <p><strong>Initial Consultation:</strong> Free</p>
-      <p><strong>50 - Minute Session:</strong> £50</p>
+      <p><strong>50-Minute Session:</strong> £50</p>
       <p>
-        All services are provided remotely, ensuring that you can receive support
-        from the comfort of your own home.
+        All services are provided remotely, allowing you to receive professional
+        support from the comfort and privacy of your own home.
       </p>
     </div>
 
-    <div class="container">
+    <!-- Services Grid -->
+    <div class="container" id="services-row">
       <div class="row">
-        <!-- Each service card -->
+        <!-- Service Card 1: EFT -->
         <div class="col-md-6 col-lg-4 mb-4">
-          <div class="service-card p-4 d-flex flex-column">
+          <div class="service-card">
+            <img src="images/eft-1.jpg" alt="EFT Tapping Therapy" />
+            <h3>Emotional Freedom Technique (EFT)</h3>
+            <p>
+              Manage anxiety, trauma, and emotional distress with EFT Tapping.
+              Combining cognitive therapy with acupressure points, EFT helps you
+              release negative emotions and restore inner balance.
+            </p>
+            <a class="btn btn-outline-primary mt-auto" href="eft-therapy.html"
+              >Learn More</a
+            >
+          </div>
+        </div>
+
+        <!-- Service Card 2: Trauma Therapy -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="service-card">
+            <img src="images/trauma.jpg" alt="Trauma Therapy Cheshire" />
+            <h3>Trauma Therapy</h3>
+            <p>
+              Our trauma-focused approach supports women through healing
+              past experiences, including domestic abuse, PTSD, or other forms
+              of emotional harm. Work towards recovery in a safe, understanding
+              environment.
+            </p>
+            <a class="btn btn-outline-primary mt-auto" href="trauma-therapy.html"
+              >Learn More</a
+            >
+          </div>
+        </div>
+
+        <!-- Service Card 3: CBT Therapy -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="service-card">
+            <img src="images/cbt.jpg" alt="CBT Therapy near me" />
+            <h3>CBT Therapy</h3>
+            <p>
+              Looking for CBT near you? We offer Cognitive Behavioural Therapy
+              sessions to help reframe negative thought patterns, address
+              depression or anxiety, and support long-term mental well-being.
+            </p>
+            <a class="btn btn-outline-primary mt-auto" href="cbt-therapy.html"
+              >Learn More</a
+            >
+          </div>
+        </div>
+
+        <!-- Service Card 4: Walk-and-Talk Therapy -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="service-card">
             <img src="images/walkntalkj.jpg" alt="Walk-and-Talk Therapy" />
             <h3>Walk-and-Talk Therapy</h3>
             <p>
-              Experience therapy in the calming embrace of nature. Our
+              Experience therapy amidst nature’s calming surroundings. Our
               walk-and-talk sessions provide a relaxed setting to discuss your
-              concerns, helping you feel more at ease.
+              concerns and promote emotional release.
             </p>
           </div>
         </div>
+
+        <!-- Service Card 5: Person-Centred Counselling -->
         <div class="col-md-6 col-lg-4 mb-4">
-          <div class="service-card p-4 d-flex flex-column">
+          <div class="service-card">
             <img src="images/personal.jpg" alt="Person-Centred Counselling" />
             <h3>Person-Centred Counselling</h3>
             <p>
-              Our person-centred approach places you at the heart of therapy. We
-              work collaboratively to understand your unique experiences and
-              foster personal growth.
+              A humanistic approach that places you at the heart of therapy.
+              Collaborate in a judgement-free space to explore personal growth
+              and self-discovery.
             </p>
           </div>
         </div>
+
+        <!-- Service Card 6: Anxiety & Depression -->
         <div class="col-md-6 col-lg-4 mb-4">
-          <div class="service-card p-4 d-flex flex-column">
-            <img
-              src="images/eft-1.jpg"
-              alt="Emotional Freedom Technique (EFT)"
-            />
-            <h3>Emotional Freedom Technique (EFT)</h3>
+          <div class="service-card">
+            <img src="images/anx-depr.jpg" alt="Anxiety & Depression Counselling" />
+            <h3>Anxiety & Depression</h3>
             <p>
-              EFT combines cognitive therapy with psychological acupuncture to
-              reduce emotional distress. Ideal for managing anxiety, trauma, and
-              even physical pain.
+              Specialised counselling to help you cope with persistent anxiety,
+              panic, or depressive episodes. Build resilience through effective
+              coping strategies and compassionate guidance.
             </p>
           </div>
         </div>
+
+        <!-- Service Card 7: Stress Management -->
         <div class="col-md-6 col-lg-4 mb-4">
-          <div class="service-card p-4 d-flex flex-column">
-            <img src="images/trauma.jpg" alt="Trauma Therapy" />
-            <h3>Trauma Therapy</h3>
-            <p>
-              Our trauma therapy is specifically designed to support women
-              through recovery, providing a safe space to heal from past
-              experiences.
-            </p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="service-card p-4 d-flex flex-column">
-            <img
-              src="images/anx-depr.jpg"
-              alt="Anxiety & Depression Counselling"
-            />
-            <h3>Anxiety & Depression Counselling</h3>
-            <p>
-              We offer specialised counselling for managing anxiety and
-              depression, tailored to the unique experiences faced by women,
-              promoting resilience and well-being.
-            </p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="service-card p-4 d-flex flex-column">
-            <img src="images/stress.jpg" alt="Stress Management" />
+          <div class="service-card">
+            <img src="images/stress.jpg" alt="Stress Management Chester" />
             <h3>Stress Management</h3>
             <p>
-              Learn effective strategies to manage stress. Our sessions focus on
-              building resilience, teaching coping mechanisms, and helping you
-              regain balance in your life.
+              Overwhelmed by daily pressures? Our stress management sessions
+              help you build practical techniques to restore balance and
+              prevent burnout.
             </p>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Schedule -->
-    <div class="container schedule-section-container">
+    <!-- Schedule Section -->
+    <div class="container schedule-section-container" id="schedule">
       <div class="row">
         <div class="col-12 text-center">
           <h2 class="schedule-heading">
@@ -216,7 +292,7 @@
           </h2>
           <p class="schedule-description">
             Book a free consultation at a time that suits you. Simply choose a
-            slot that works for you from the calendar below.
+            slot from the calendar below.
           </p>
         </div>
       </div>
@@ -233,25 +309,6 @@
       src="https://assets.calendly.com/assets/external/widget.js"
       async
     ></script>
-    <div id="schedule"></div>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const links = document.querySelectorAll('a[href^="#"]');
-        for (let link of links) {
-          link.addEventListener("click", function (event) {
-            event.preventDefault();
-            const targetId = this.getAttribute("href");
-            const targetElement = document.querySelector(targetId);
-            if (targetElement) {
-              window.scrollTo({
-                top: targetElement.offsetTop,
-                behavior: "smooth",
-              });
-            }
-          });
-        }
-      });
-    </script>
   </div> <!-- End .content-container -->
 
   <!-- Footer -->
@@ -267,8 +324,12 @@
         </div>
         <div class="col-md-4 mb-4">
           <h5>Legal</h5>
-          <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Cookie Policy</a>
-          <a href="#" data-bs-toggle="modal" data-bs-target="#policyModal">Privacy Policy</a>
+          <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
+            >Cookie Policy</a
+          >
+          <a href="#" data-bs-toggle="modal" data-bs-target="#policyModal"
+            >Privacy Policy</a
+          >
         </div>
         <div class="col-md-4 mb-4">
           <h5>Connect with Us</h5>
@@ -293,11 +354,13 @@
     document.addEventListener("DOMContentLoaded", function () {
       const consentBanner = document.getElementById("cookieConsent");
       const acceptButton = document.getElementById("acceptCookies");
+
       if (localStorage.getItem("cookieConsent") !== "true") {
         consentBanner.style.display = "block";
       } else {
         consentBanner.style.display = "none";
       }
+
       acceptButton.addEventListener("click", function () {
         localStorage.setItem("cookieConsent", "true");
         consentBanner.style.display = "none";
