--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center py-3" href="index.html">
-        <img src="images/logo-talk-with-sian.jpg" alt="Talk with Sian" class="rounded-circle me-2" />
+        <img
+          src="images/logo-talk-with-sian.jpg"
+          alt="Talk with Sian"
+          class="rounded-circle me-2"
+        />
         <span class="navbar-brand-name ms-2">Talk with Sian</span>
       </a>
       <button
@@ -92,21 +96,39 @@
         data-bs-target="#navbarNav"
         aria-controls="navbarNav"
         aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav py-4">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+
+          <!-- Services Dropdown -->
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle active"
+              href="#"
+              id="servicesDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Services
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+              <li><a class="dropdown-item" href="services.html">All Services</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="eft-therapy.html">EFT Tapping</a></li>
+              <li><a class="dropdown-item" href="trauma-therapy.html">Trauma Therapy</a></li>
+              <li><a class="dropdown-item" href="cbt-therapy.html">CBT Therapy</a></li>
+            </ul>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
