--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
 
     <div class="hero-section my-5">
       <h1>Talk with Sian</h1>
-      <p>
+      <p class="text-white">
         Our mission is to provide compassionate and personalised therapy to help
         you achieve your best self. We combine evidence-based practices with a
         heart-centred approach to support your mental health journey.
