--- a/cbt-therapy.html
+++ b/cbt-therapy.html
@@ -133,7 +133,7 @@
 
     /* ========== Hero Section ========== */
     .hero-section {
-      background-image: url("https://via.placeholder.com/1600x700/9370DB/FFFFFF?text=CBT+Therapy+Hero");
+      background-image: url("images/CBT-hero.jpg");
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -141,6 +141,7 @@
       padding: 6rem 2rem;
       border-radius: 10px;
       margin-bottom: 3rem;
+      min-height: 60vh;
     }
     .hero-section h1 {
       font-size: 3rem;
@@ -235,7 +236,7 @@
     <div class="container">
       <a class="navbar-brand d-flex align-items-center py-3" href="index.html">
         <img
-          src="https://via.placeholder.com/70/9966cc/ffffff?text=Sian"
+          src="images/logo-talk-with-sian.jpg"
           alt="Talk with Sian"
           class="rounded-circle me-2"
         />
@@ -309,7 +310,7 @@
     <!-- HERO SECTION -->
     <div class="hero-section">
       <h1>CBT Therapy</h1>
-      <p>
+      <p class="text-white">
         Reshape negative thought patterns and build practical solutions for better mental health.
       </p>
     </div>
@@ -318,7 +319,7 @@
     <div class="row align-items-center g-5 mb-5">
       <div class="col-md-6">
         <img
-          src="https://via.placeholder.com/700x450/ddd/000?text=CBT+Therapy"
+          src="images/cbt-2.jpg"
           alt="CBT Therapy in Chester & Cheshire"
           class="img-fluid rounded shadow"
         />
@@ -359,7 +360,7 @@
       </div>
       <div class="col-lg-6 text-center">
         <img
-          src="https://via.placeholder.com/500x350/856798/ffffff?text=Why+Choose+CBT"
+          src="images/why-cbt.jpg"
           alt="Why CBT"
           class="img-fluid rounded shadow"
         />
@@ -370,7 +371,7 @@
     <div class="row align-items-center mb-5 g-5">
       <div class="col-lg-6">
         <img
-          src="https://via.placeholder.com/650x400/7e57c2/ffffff?text=How+CBT+Works"
+          src="images/how-cbt-works.jpg"
           alt="How CBT Works"
           class="img-fluid rounded shadow"
         />
@@ -408,7 +409,7 @@
       </div>
       <div class="col-md-6">
         <img
-          src="https://via.placeholder.com/600x400/ddd/000?text=Remote+CBT+Sessions"
+          src="images/cbt-remote.jpg"
           alt="Remote Therapy"
           class="img-fluid rounded shadow"
         />
