--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
 
     <div class="contact-hero-section my-5 py-5 px-3 mb-4">
       <h1>Contact Talk with Sian</h1>
-      <p class="lead p-md-3">
+      <p class="lead p-md-3 text-white">
         We offer remote counselling services for women across North Wales. Reach out to schedule a session or to ask any questions you might have.
       </p>
       <a href="services.html">Explore Our Services</a>
