--- a/trauma-therapy.html
+++ b/trauma-therapy.html
@@ -132,12 +132,13 @@
 
     /* =============== HERO SECTION =============== */
     .hero-section {
-      background-image: url("https://via.placeholder.com/1600x700/9370DB/FFFFFF?text=Trauma+Therapy+Hero");
+      background-image: url("images/trauma-therapy-hero.jpg");
       background-size: cover;
       background-position: center;
       color: #fff;
       text-align: center;
       padding: 6rem 2rem;
+      min-height: 60vh;
       border-radius: 10px;
       margin-bottom: 3rem;
     }
@@ -242,7 +243,7 @@
       <a class="navbar-brand d-flex align-items-center py-3" href="index.html">
         <!-- Replace with your real logo if available -->
         <img
-          src="https://via.placeholder.com/70/9966cc/ffffff?text=Sian"
+          src="images/logo-talk-with-sian.jpg"
           alt="Talk with Sian"
           class="rounded-circle me-2"
         />
@@ -313,7 +314,7 @@
     </div>
 
     <!-- WHY TRAUMA THERAPY -->
-    <div class="row align-items-center g-5 mb-5">
+    <div class="row align-items-center g-5 mb-5 py-4">
       <div class="col-md-6">
         <h2>Why Trauma Therapy?</h2>
         <p>
@@ -329,7 +330,7 @@
       </div>
       <div class="col-md-6">
         <img
-          src="https://via.placeholder.com/650x450/ddd/000?text=Why+Trauma+Therapy"
+          src="images/why-trauma-therapy.jpg"
           alt="Why Trauma Therapy"
           class="img-fluid rounded-shadow"
         />
@@ -361,7 +362,7 @@
     <div class="row align-items-center mb-5 g-5">
       <div class="col-lg-6 order-lg-2">
         <img
-          src="https://via.placeholder.com/600x400/856798/ffffff?text=Our+Trauma+Approach"
+          src="images/therapeutic-approach.jpg"
           alt="Therapeutic Approach"
           class="img-fluid rounded-shadow"
         />
@@ -398,7 +399,7 @@
       </div>
       <div class="col-md-6">
         <img
-          src="https://via.placeholder.com/550x350/7e57c2/ffffff?text=Remote+Therapy"
+          src="images/remote-therapy-2.jpg"
           alt="Remote Therapy"
           class="img-fluid rounded-shadow"
         />
