--- a/eft-therapy.html
+++ b/eft-therapy.html
@@ -179,7 +179,7 @@
        Hero Section
     ========================================= */
     .hero-section {
-      background-image: url("https://via.placeholder.com/1600x800/9370DB/FFFFFF?text=EFT+Therapy+Hero");
+      background-image: url("images/eft-hero.jpg");
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -187,6 +187,7 @@
       padding: 6rem 2rem;
       border-radius: 10px;
       margin-bottom: 3rem;
+      min-height:60vh;
     }
     .hero-section h1 {
       font-size: 3rem;
@@ -403,7 +404,7 @@
   <!-- ======== MAIN CONTENT ======== -->
   <div class="container content-container flex-grow-1 pt-5 mt-5">
     <!-- Hero Section -->
-    <div class="hero-section">
+    <div class="hero-section d-flex-column justify-content-center align-items-center">
       <h1>EFT Tapping Therapy</h1>
       <p>Transform anxiety, stress, or emotional blocks with a gentle, hands-on approach that soothes both mind and body.</p>
       <a class="gradient-button mt-4" href="contact.html">Book a Session</a>
@@ -414,14 +415,16 @@
       <h2 class="section-title">What Is EFT Tapping?</h2>
       <div class="col-md-6">
         <img
-          src="https://via.placeholder.com/800x500/BBCCF6/333333?text=EFT+Tapping+Overview"
+          src="images/eft-tapping-overview.jpg"
           alt="EFT Tapping overview"
           class="img-fluid rounded-shadow"
+          style="max-height: 300px;"
         />
         <img
-          src="https://via.placeholder.com/800x500/CBBBD9/333333?text=Mind-Body+Connection"
+          src="images/mind-body-connection.jpg"
           alt="Mind-body connection"
           class="img-fluid rounded-shadow"
+          style="max-height: 300px;"
         />
       </div>
       <div class="col-md-6">
@@ -442,11 +445,11 @@
     </div>
 
     <!-- HOW EFT HELPS + short text blocks + images -->
-    <div class="row mb-5">
+    <div class="row mb-5 m-2">
       <h2 class="section-title">How EFT Helps</h2>
       <div class="col-md-4 mb-4">
         <img
-          src="https://via.placeholder.com/400x250/9370DB/ffffff?text=Stress+Relief"
+          src="images/stress-relief.jpg"
           alt="Stress relief"
           class="img-fluid rounded-shadow"
         />
@@ -458,7 +461,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <img
-          src="https://via.placeholder.com/400x250/BBCCF6/333333?text=Confidence+Boost"
+          src="images/confidence-boost.jpg"
           alt="Confidence boost"
           class="img-fluid rounded-shadow"
         />
@@ -469,7 +472,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <img
-          src="https://via.placeholder.com/400x250/CBBBD9/333333?text=Emotional+Balance"
+          src="images/emotional-balance.jpg"
           alt="Emotional balance"
           class="img-fluid rounded-shadow"
         />
@@ -482,9 +485,9 @@
     </div>
 
     <!-- SESSION EXPERIENCE section -->
-    <div class="row mb-5 align-items-center">
+    <div class="row mb-5 align-items-center m-2">
       <h2 class="section-title">Your EFT Session</h2>
-      <div class="col-md-6">
+      <div class="col-md-6 ">
         <p>
           Each session is customized for you. We begin by identifying the core
           issue or emotion you’d like to address, then guide you through tapping
@@ -500,7 +503,7 @@
       </div>
       <div class="col-md-6">
         <img
-          src="https://via.placeholder.com/800x500/DED0F6/333333?text=In-Person+%7C+Remote+EFT"
+          src="images/eft-session.jpg"
           alt="EFT Session"
           class="img-fluid rounded-shadow"
         />
