--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
     <div class="container d-flex align-items-center justify-content-between">
       <p class="mb-0">
         We use cookies to improve your experience on our site. By continuing to use our site, you accept our use of cookies.
-        <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
+        <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
       </p>
       <button id="acceptCookies" class="btn btn-primary">Accept</button>
     </div>
@@ -142,7 +142,7 @@
     </div>
 
     <div class="about-section" id="our-story">
-      <h2 class="text-center">Our Story</h2>
+      <h2 class="text-center">My Story</h2>
       <p>
         At Talk with Sian, we believe in the power of therapy to transform lives.
         Our practice was founded with the vision of creating a safe, supportive
@@ -535,10 +535,10 @@
         </div>
         <div class="col-md-4 mb-4">
           <h5>Legal</h5>
-          <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
+          <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
             >Cookie Policy</a
           >
-          <a href="#" data-bs-toggle="modal" data-bs-target="#policyModal"
+          <a href="privacy-policy.html" data-bs-toggle="modal" data-bs-target="#policyModal"
             >Privacy Policy</a
           >
         </div>
