--- a/cbt-therapy.html
+++ b/cbt-therapy.html
@@ -297,7 +297,7 @@
       <p class="mb-0">
         We use cookies to improve your experience on our site. By continuing to
         use our site, you accept our use of cookies.
-        <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">
+        <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">
           Learn more
         </a>.
       </p>
@@ -437,26 +437,30 @@
   <!-- FOOTER -->
   <footer class="footer mt-auto">
     <div class="container">
-      <div class="row py-3">
-        <div class="col-md-4 mb-3">
+      <div class="row">
+        <div class="col-md-4 mb-4">
           <h5>Quick Links</h5>
           <a href="index.html">Home</a> |
           <a href="about.html">About</a> |
           <a href="services.html">Services</a> |
           <a href="contact.html">Contact</a>
         </div>
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-4">
           <h5>Legal</h5>
-          <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Cookie Policy</a>
-          <a href="#" data-bs-toggle="modal" data-bs-target="#policyModal">Privacy Policy</a>
+          <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
+            >Cookie Policy</a
+          >
+          <a href="privacy-policy.html" data-bs-toggle="modal" data-bs-target="#policyModal"
+            >Privacy Policy</a
+          >
         </div>
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-4">
           <h5>Connect with Us</h5>
           <p>Mobile: +44 7754 141453</p>
           <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
         </div>
       </div>
-      <div class="text-center p-2">
+      <div class="text-center p-3">
         © 2024 Talk with Sian. Designed by
         <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
       </div>
