--- a/services.html
+++ b/services.html
@@ -361,7 +361,7 @@
         <p class="mb-0">
           We use cookies to improve your experience on our site. By continuing to
           use our site, you accept our use of cookies.
-          <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
+          <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
         </p>
         <button id="acceptCookies" class="btn-sian-outline">Accept</button>
       </div>
@@ -503,8 +503,12 @@
           </div>
           <div class="col-md-4 mb-4">
             <h5>Legal</h5>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Cookie Policy</a>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#policyModal">Privacy Policy</a>
+            <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
+              >Cookie Policy</a
+            >
+            <a href="privacy-policy.html" data-bs-toggle="modal" data-bs-target="#policyModal"
+              >Privacy Policy</a
+            >
           </div>
           <div class="col-md-4 mb-4">
             <h5>Connect with Us</h5>
