--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
     <div class="container d-flex align-items-center justify-content-between">
       <p class="mb-0">
         We use cookies to improve your experience on our site. By continuing to use our site, you accept our use of cookies.
-        <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
+        <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
       </p>
       <button id="acceptCookies" class="btn btn-primary">Accept</button>
     </div>
@@ -226,8 +226,6 @@
       });
     </script>
   </div>
-
-  <!-- Footer -->
   <footer class="footer mt-auto">
     <div class="container">
       <div class="row">
@@ -240,10 +238,10 @@
         </div>
         <div class="col-md-4 mb-4">
           <h5>Legal</h5>
-          <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
+          <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
             >Cookie Policy</a
           >
-          <a href="#" data-bs-toggle="modal" data-bs-target="#policyModal"
+          <a href="privacy-policy.html" data-bs-toggle="modal" data-bs-target="#policyModal"
             >Privacy Policy</a
           >
         </div>
