--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     margin-bottom: 2rem;
  
 }
+
+
     </style>
     <!-- Google Tag Manager Scripts (if required) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D5JECZ0HX4"></script>
@@ -134,7 +136,7 @@
       <div class="container d-flex align-items-center justify-content-between">
         <p class="mb-0">
           We use cookies to improve your experience on our site. By continuing to use our site, you accept our use of cookies.
-          <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
+          <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
         </p>
         <button id="acceptCookies" class="btn btn-primary">Accept</button>
       </div>
@@ -286,8 +288,6 @@
       </div>
     </div>
     <!-- End .content-container -->
-
-    <!-- Footer -->
     <footer class="footer mt-auto">
       <div class="container">
         <div class="row">
@@ -300,8 +300,12 @@
           </div>
           <div class="col-md-4 mb-4">
             <h5>Legal</h5>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Cookie Policy</a>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#policyModal">Privacy Policy</a>
+            <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
+              >Cookie Policy</a
+            >
+            <a href="privacy-policy.html" data-bs-toggle="modal" data-bs-target="#policyModal"
+              >Privacy Policy</a
+            >
           </div>
           <div class="col-md-4 mb-4">
             <h5>Connect with Us</h5>
@@ -310,7 +314,8 @@
           </div>
         </div>
         <div class="text-center p-3">
-          © 2024 Talk with Sian. Designed by <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
+          © 2024 Talk with Sian. Designed by
+          <a href="https://www.cleandesignuk.uk/" class="bold">Clean Design UK</a>
         </div>
       </div>
     </footer>
