--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
     <div class="container d-flex align-items-center justify-content-between">
       <p class="mb-0">
         We use cookies to improve your experience on our site. By continuing to use our site, you accept our use of cookies.
-        <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Learn more</a>.
+        <a href="cookie-policy.html" >Learn more</a>.
       </p>
       <button id="acceptCookies" class="btn btn-primary">Accept</button>
     </div>
