--- a/cbt-therapy.html
+++ b/cbt-therapy.html
@@ -297,7 +297,7 @@
       <p class="mb-0">
         We use cookies to improve your experience on our site. By continuing to
         use our site, you accept our use of cookies.
-        <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">
+        <a href="cookie-policy.html" >
           Learn more
         </a>.
       </p>
