--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
           </div>
           <div class="col-md-4 mb-4">
             <h5>Legal</h5>
-            <a href="cookie-policy.html" data-bs-toggle="modal" data-bs-target="#cookiePolicyModal"
+            <a href="cookie-policy.html"
               >Cookie Policy</a
             >
-            <a href="privacy-policy.html" data-bs-toggle="modal" data-bs-target="#policyModal"
+            <a href="privacy-policy.html" 
               >Privacy Policy</a
             >
           </div>
