--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -35,7 +35,7 @@
   <body>
     <div class="content">
       <h1>Cookie Policy</h1>
-      <p>Effective Date: [Insert Date]</p>
+      <p>Effective Date: 31/01/2023</p>
       <p>
         At Talk with Sian, we use cookies to enhance your browsing experience and provide personalised services. This Cookie Policy explains what cookies are, how we use them, and your choices regarding their use.
       </p>
