--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
 
 
     </style>
-    <!-- Google Tag Manager Scripts (if required) -->
+   
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16513767694');
+</script>
+   <!-- Google Tag Manager Scripts (if required) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D5JECZ0HX4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
