--- a/services.html
+++ b/services.html
@@ -294,7 +294,16 @@
       }
     </style>
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-16513767694');
+</script>
   <body class="d-flex flex-column min-vh-100">
     <!-- ======== NAVBAR ======== -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
