--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Updated Title & Meta for Improved SEO -->
     <title>Talk with Sian – Compassionate Therapy, Counselling & EFT Tapping in Chester & Cheshire</title>
     <meta name="description" content="Talk with Sian provides professional therapy and counselling services in Chester & Cheshire. Whether you are searching for a therapist near me, expert EFT Tapping, domestic abuse counselling, or CBT for depression, our bespoke treatments are designed for you." />
-    <meta name="keywords" content="therapist, counsellor, therapist near me, EFT Tapping, Emotional Freedom Therapy, Emotional Freedom Tapping, Tapping Therapy, domestic abuse counselling, CBT for depression, babcp accreditation, compassion focused therapy" />
+    <meta name="keywords" content="therapist, counsellor, therapist near me, EFT Tapping, Emotional Freedom Therapy, Emotional Freedom Tapping, Tapping Therapy, domestic abuse counselling, CBT for depression, bacp accreditation, compassion focused therapy" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Talk with Sian" />
     <meta name="geo.region" content="GB-CHS" />
@@ -170,7 +170,7 @@
       <!-- Hero Section -->
       <div class="hero-section my-4">
         <h1>Empowering Women Through Compassionate Counselling</h1>
-        <p class="lead text-white">Your trusted therapist and counsellor near you in Chester & Cheshire.</p>
+        <p class="lead text-white">Your trusted therapist and counsellor near you in Chester & Flintshire.</p>
         <a class="btn btn-primary btn-lg my-5" href="services.html" role="button">Explore Our Services</a>
       </div>
 
@@ -182,7 +182,7 @@
               <img src="images/talk-with-sian-services.jpg" alt="Therapy Services in Chester" />
               <h3>Counselling &amp; Therapy Services</h3>
               <p class="py-0 py-lg-3 py-xl-0">
-                Explore a range of services including EFT Tapping, domestic abuse counselling, CBT and more tailored to your needs.
+                Explore a range of services including EFT Tapping, domestic abuse counselling, person centred therapy and more tailored to your needs.
               </p>
               <a href="services.html">Learn More</a>
             </div>
@@ -190,9 +190,9 @@
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="nav-card">
               <img src="images/talk-with-sian-about.jpg" alt="About Sian, Therapist in Cheshire" />
-              <h3>About Us</h3>
+              <h3>About Me</h3>
               <p>
-                Discover Sian’s approach to counselling, her BABCP accreditation and her commitment as a dedicated therapist in Chester & Cheshire.
+                Discover Sian’s approach to counselling, her BACP accreditation and her commitment as a dedicated therapist in Chester & Flintshire.
               </p>
               <a href="about.html">Meet Sian</a>
             </div>
@@ -200,7 +200,7 @@
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="nav-card">
               <img src="images/talk-with-sian-contact.jpg" alt="Contact Therapist in Chester" />
-              <h3>Contact Us</h3>
+              <h3>Contact Me</h3>
               <p class="py-3 py-xl-0">
                 Get in touch today for a consultation. Our experienced counsellor is here to support you with expert guidance.
               </p>
@@ -287,7 +287,7 @@
 
       <!-- Additional About-Links Navigation -->
       <div class="about-navigation">
-        <h2 class="navigation-title">Learn More About Us</h2>
+        <h2 class="navigation-title">Learn More About Me</h2>
         <div class="navigation-links">
           <a href="about.html#our-story" class="navigation-link">Our Story</a>
           <a href="about.html#bio" class="navigation-link">Meet Sian</a>
